pruebaFinal/force-app/main/default/objects/Benefit__c/Benefit__c.object-meta.xml
<CustomObject>
    <label>Benefit</label>
    <nameField>
        <displayFormat>BEN-{000000}</displayFormat>
        <label>Beneficio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>