pruebaFinal/force-app/main/default/objects/Benefit__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Categoría del tipo de beneficio que aplica a la tarjeta</description>
    <inlineHelpText>Beneficio: De la marca de tarjeta. Promoción: del banco</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>categoriaBeneficio</valueSetName>
    </valueSet>
</CustomField>