pruebaFinal/force-app/main/default/objects/Benefit__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Descripción del beneficio, términos y condiciones</description>
    <inlineHelpText>Términos y condiciones del beneficio</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>