pruebaFinal/force-app/main/default/objects/Benefit__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Fecha de caducidad del beneficio</description>
    <inlineHelpText>Fecha de caducidad del beneficio</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>