pruebaFinal/force-app/main/default/objects/Benefit__c/fields/Nombre_de_la_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_Tarjeta__c</fullName>
    <description>Nombre del producto completo</description>
    <formula>TEXT(Tipo_de_Tarjeta__c) &amp; &quot;, &quot; &amp; TEXT(Segmento_de_Tarjeta__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este es el modelo de tu tarjeta</inlineHelpText>
    <label>Nombre de la Tarjeta</label>
    <type>Text</type>
</CustomField>