pruebaFinal/force-app/main/default/objects/Benefit__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto relacionado al beneficio</description>
    <inlineHelpText>Este producto es dueño del beneficio</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Benefits</relationshipLabel>
    <relationshipName>Benefits</relationshipName>
    <type>Lookup</type>
</CustomField>