pruebaFinal/force-app/main/default/objects/Benefit__c/fields/sectorNegocio__c.field-meta.xml
<CustomField>
    <fullName>sectorNegocio__c</fullName>
    <description>Tipo de negocio al que aplica el beneficio</description>
    <inlineHelpText>Servicio o negocio donde usar tu beneficio</inlineHelpText>
    <label>sectorNegocio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>businessBeneficio</valueSetName>
    </valueSet>
</CustomField>