pruebaFinal/force-app/main/default/objects/Benefit__c/fields/Segmento_de_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Segmento_de_Tarjeta__c</fullName>
    <description>Nivel del producto solicitado. Valores: Plata, Oro, Infinite.</description>
    <inlineHelpText>Categoría de tu tarjeta</inlineHelpText>
    <label>Segmento de Tarjeta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Tarjeta__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>segmentoDeTarjeta</valueSetName>
    </valueSet>
</CustomField>