pruebaFinal/force-app/main/default/objects/Benefit__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Fecha de inicio del beneficio</description>
    <inlineHelpText>Fecha de inicio del beneficio</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>