pruebaFinal/force-app/main/default/objects/Benefit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Estado de la promoción, según las fechas de creación y termino.</description>
    <formula>IF(
    AND(
        TODAY() &gt;= Start_Date__c,
        TODAY() &lt;= End_Date__c
    ),
    &quot;Active&quot;,
    &quot;Inactive&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estado según las fechas de la promoción.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>