pruebaFinal/force-app/main/default/objects/Benefit__c/fields/unitBeneficio__c.field-meta.xml
<CustomField>
    <fullName>unitBeneficio__c</fullName>
    <description>Unidad del tipo de beneficio seleccionado</description>
    <inlineHelpText>Unidad del valor del beneficio</inlineHelpText>
    <label>unitBeneficio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>unitBeneficio</valueSetName>
    </valueSet>
</CustomField>