pruebaFinal/force-app/main/default/objects/Benefit__c/fields/Value_Amount__c.field-meta.xml
<CustomField>
    <fullName>Value_Amount__c</fullName>
    <description>Es el valor númerico del beneficio</description>
    <inlineHelpText>Valor del beneficio</inlineHelpText>
    <label>Value Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>