pruebaFinal/force-app/main/default/objects/Benefit__c/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <description>Es el tipo de beneficio reconocido por el banco</description>
    <inlineHelpText>Es el tipo de beneficio que se aplica</inlineHelpText>
    <label>Value Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tipoDeBeneficio</valueSetName>
    </valueSet>
</CustomField>