pruebaFinal/force-app/main/default/objects/Benefit__c/validationRules/Validar_Fecha_Inicio_Promocion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Fecha_Inicio_Promocion</fullName>
    <active>true</active>
    <description>Esta regla asegurará que la fecha de inicio no sea en el futuro y que no sea demasiado antigua (máximo 1 año hacia atrás desde hoy).</description>
    <errorConditionFormula>OR(
    /* Condición 1: No puede ser un día posterior a hoy (futuro) */
    Start_Date__c &gt; TODAY(),
    
    /* Condición 2: No puede ser menor a 1 año (12 meses) hacia atrás desde hoy */
    Start_Date__c &lt; ADDMONTHS(TODAY(), -12)
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>La Fecha de Inicio es inválida. No puede ser una fecha futura ni tener una antigüedad mayor a 1 año desde el día de hoy.</errorMessage>
</ValidationRule>